--- a/index.html
+++ b/index.html
@@ -6,6 +6,22 @@
 	<title>Document</title>
 </head>
 <body>
-	
+	<nav class="top-navigation">
+		<div class="content">
+			<img class="logo" src='images/karmalogo.png'>
+			<ul class="Navigation">
+				<li>Meet Karma</li>
+				<li>How it Works</li>
+				<li>Store</li>
+				<li>Blog</li>
+				<li>Help</li>
+				<li>Login</li>
+			</ul>
+
+		</div>
+	</nav>
+	<section class="image"></section>
+	<section class="icons"></section>
+	<footer class="footer"></footer>
 </body>
 </html>
