--- a/index.html
+++ b/index.html
@@ -2,25 +2,29 @@
 <html lang="en">
 <head>
 	<link rel="stylesheet" href="css/style.css">
+	<link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
 	<meta charset="UTF-8">
 	<title>Document</title>
 </head>
 <body>
 	<nav class="top-navigation">
 		<div class="content">
-			<img class="logo" src='images/karmalogo.png'>
-			<ul class="Navigation">
-				<li>Meet Karma</li>
-				<li>How it Works</li>
+			<ul class="links">
+				<li class="active">Meet Karma</li>
+				<li>How it works</li>
 				<li>Store</li>
 				<li>Blog</li>
 				<li>Help</li>
-				<li>Login</li>
+				<li>Log in</li>
 			</ul>
-
+			<img class="logo" src='images/karma-logo-copy.svg' alt="Karma" width="26">
 		</div>
 	</nav>
-	<section class="image"></section>
+	<section class="introduction">
+		<div class="content">
+			
+		</div>
+	</section>
 	<section class="icons"></section>
 	<footer class="footer"></footer>
 </body>
