--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 	</nav>
 	<section class="introduction">
 		<div class="content">
+			<h1>Introducing Karma</h1>
+			<h3>Bring WiFi with you, everywhere you go.</h3>
 			
 		</div>
 	</section>
