--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<div class="content">
 			<h1>Introducing Karma</h1>
 			<h3>Bring WiFi with you, everywhere you go.</h3>
-			
+			<button class="big-button">Learn More</button>
 		</div>
 	</section>
 	<section class="icons"></section>
