--- a/index.html
+++ b/index.html
@@ -27,7 +27,26 @@
 			<button class="big-button">Learn More</button>
 		</div>
 	</section>
-	<section class="icons"></section>
-	<footer class="footer"></footer>
+	<section class="cases">
+		<div class="content">
+			<h2>Everyone needs a little Karma</h2>
+			<ul class="devices">
+				<li>
+					<img src="images/icon-devices-copy.svg" alt="internet image">
+					<h3 class="captions">Internet for all devices</h3>
+				</li
+				><li>
+					<img src="images/icon-coffee-copy.svg" alt="COFFEE">
+					<h3 class="captions">Boost your productivity</h3>
+				</li
+				><li>
+					<img src="images/icon-refill-copy.svg" alt="refill">
+					<h3 class="captions">Pay as You Go</h3>
+				</li>
+			</ul>
+
+		</div>
+	</section>	
+	<footer class="social"></footer>
 </body>
 </html>
