--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
 	<link rel="stylesheet" href="css/style.css">
 	<link href='http://fonts.googleapis.com/css?family=Roboto:400,500,300' rel='stylesheet' type='text/css'>
-	<meta charset="UTF-8">
-	<title>Document</title>
+	<!-- <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet"> -->
+	<link href="css/font-awesome.min.css" rel="stylesheet">	<meta charset="UTF-8">
+	<title>Karma</title>
+	<link rel="icon" type="image/png" href="favicon.ico" />
 </head>
 <body>
 	<nav class="top-navigation">
@@ -47,6 +49,22 @@
 
 		</div>
 	</section>	
-	<footer class="social"></footer>
+	<footer class="social">
+		<div class="content">
+			<h3>Join Us On</h3>
+			<ul class="icons">
+				<li class="twitter" >
+					<i class="fa fa-twitter"></i>
+				</li>
+				<li class="facebook">
+					<i class="fa fa-facebook"></i>
+				</li>
+				<li class="instagram">
+					<i class="fa fa-instagram"></i>
+				</li>
+			</ul>
+			<h4 class="copyright">&copy Karma Mobility, Inc.</h4>
+		</div>
+	</footer>
 </body>
 </html>
